samples/_failures_safe/1761044983_60024c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5097a92d.c: In function ‘main’:
./samples/SAFE/__tmp_5097a92d.c:160:12: error: missing terminating " character
  160 |     printf("Adding nodes 0-9...
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5097a92d.c:160:5: error: expected expression at end of input
  160 |     printf("Adding nodes 0-9...
      |     ^~~~~~
./samples/SAFE/__tmp_5097a92d.c:160:5: error: expected declaration or statement at end of input
